<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/pref_notification_settings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_receive_notifications"
            android:title="@string/pref_summary_receive_notifications" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_vibrate"
            android:title="@string/pref_summary_vibrate" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_sound"
            android:title="@string/pref_summary_sound" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_blinkLED"
            android:title="@string/pref_summary_blinkLED" />
    </PreferenceScreen>
    <PreferenceScreen
        android:persistent="false"
        android:title="@string/pref_account_settings">
        <EditTextPreference
            android:id="@+id/pref_name"
            android:key="@string/pref_key_name"
            android:maxLength="24"
            android:title="@string/pref_summary_name" />
        <machat.machat.main.preferences.EmailPreference
            android:key="@string/pref_key_email"
            android:title="@string/pref_summary_email" />
        <machat.machat.main.preferences.PasswordPreference
            android:key="@string/pref_key_password"
            android:title="@string/pref_summary_password" />
        <machat.machat.main.preferences.LogoutDialogPreference
            android:key="@string/pref_key_logout"
            android:title="@string/pref_summary_logout" />
    </PreferenceScreen>
</PreferenceScreen>